<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:id="@+id/weatherCardView"
    app:expandOnClick="true"
    >
    <TextView
        android:id="@+id/weatherHistoryCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/label_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/weatherHistoryCityName"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/weather_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@id/label_monday"
        app:layout_constraintStart_toEndOf="@id/label_monday"
        />
    <TextView
        android:id="@+id/label_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/label_monday"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/weather_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@id/label_tuesday"
        app:layout_constraintStart_toEndOf="@id/label_tuesday"
        />
    <TextView
        android:id="@+id/label_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/label_tuesday"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/weather_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@id/label_wednesday"
        app:layout_constraintStart_toEndOf="@id/label_wednesday"
        />
    <TextView
        android:id="@+id/label_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/label_wednesday"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/weather_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@id/label_thursday"
        app:layout_constraintStart_toEndOf="@id/label_thursday"
        />
    <TextView
        android:id="@+id/label_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/label_thursday"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/weather_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@id/label_friday"
        app:layout_constraintStart_toEndOf="@id/label_friday"
        />
    <TextView
        android:id="@+id/label_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#AE0909"
        app:layout_constraintTop_toBottomOf="@id/label_friday"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/weather_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@id/label_saturday"
        app:layout_constraintStart_toEndOf="@id/label_saturday"
        />
    <TextView
        android:id="@+id/label_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#AE0909"
        app:layout_constraintTop_toBottomOf="@id/label_saturday"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/weather_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="@id/label_sunday"
        app:layout_constraintStart_toEndOf="@id/label_sunday"
        />

</androidx.constraintlayout.widget.ConstraintLayout>